@@ -1,0 +1,14 @@
+<?xml version='1.0'?>
+<xsl:stylesheet xmlns:xsl="http://www.w3.org/1999/XSL/Transform"
+xmlns:doc="http://nwalsh.com/xsl/documentation/1.0" version="1.0">
+ 
+<xsl:import href="/usr/share/sgml/docbook/xsl-stylesheets/xhtml/docbook.xsl"/>
+<xsl:import href="xhtml-common.xsl"/>
+ 
+<!-- this will give you the doctype on your chunks -->
+<xsl:output method="xml" encoding="ISO-8859-1" indent="yes"
+doctype-public="-//W3C//DTD XHTML 1.0 Transitional//EN"
+doctype-system="http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"
+/>
+ 
+</xsl:stylesheet>
